fix blurry text

--- a/src/style.css
+++ b/src/style.css
@@ -35,11 +35,16 @@ body {
   border-radius: 2rem;
   margin-top: 2.5rem;
   margin-bottom: 1rem;
+
 }
 
 /*LED Text*/
 #led-text {
+  justify-content: center;
+  align-items: center;
   color: black;
+  width: 100%;
+  height: 100%;
 }
 
 /*Input text and fullscreen button*/
@@ -279,7 +284,3 @@ footer {
   border-radius: 0.3rem;
 }
 
-#led-text {
-  width: 100%;
-  height: 100%;
-}
